@@ -1,9 +1,11 @@
 package com.example.evently.ui.common;
 
+import static com.example.evently.data.model.Role.AdminRole;
 import static com.example.evently.data.model.Role.EntrantRole;
 import static com.example.evently.data.model.Role.OrganizerRole;
 
-import java.util.List;
+import java.util.ArrayList;
+import java.util.Arrays;
 
 import android.Manifest;
 import android.content.Intent;
@@ -15,6 +17,7 @@ import android.widget.AdapterView;
 import android.widget.Toast;
 import androidx.activity.result.ActivityResultLauncher;
 import androidx.activity.result.contract.ActivityResultContracts;
+import androidx.annotation.MenuRes;
 import androidx.annotation.NavigationRes;
 import androidx.appcompat.app.AppCompatActivity;
 import androidx.core.content.ContextCompat;
@@ -24,11 +27,15 @@ import androidx.navigation.ui.NavigationUI;
 
 import com.google.firebase.messaging.FirebaseMessaging;
 
+import com.example.evently.R;
+import com.example.evently.data.AccountDB;
 import com.example.evently.data.model.Role;
 import com.example.evently.databinding.ActivityArchitectureBinding;
+import com.example.evently.ui.admin.AdminActivity;
 import com.example.evently.ui.auth.AuthActivity;
 import com.example.evently.ui.entrant.EntrantActivity;
 import com.example.evently.ui.organizer.OrganizerActivity;
+import com.example.evently.utils.FirebaseAuthUtils;
 import com.example.evently.utils.FirebaseMessagingUtils;
 
 /**
@@ -72,6 +79,11 @@ public abstract class ArchitectureActivity extends AppCompatActivity
     @NavigationRes
     protected abstract int getGraph();
 
+    @MenuRes
+    protected int getMenu() {
+        return R.menu.navbar;
+    }
+
     /**
      * Role index for the implementing activity.
      * @implNote Entrant=0, Organizer=1, Admin>1
@@ -80,8 +92,9 @@ public abstract class ArchitectureActivity extends AppCompatActivity
         return switch (this) {
             case EntrantActivity ignored -> 0;
             case OrganizerActivity ignored -> 1;
+            case AdminActivity ignored -> 2;
             // Admin activity.
-            default -> 2;
+            default -> 3;
         };
     }
 
@@ -92,15 +105,32 @@ public abstract class ArchitectureActivity extends AppCompatActivity
         binding = ActivityArchitectureBinding.inflate(getLayoutInflater());
         setContentView(binding.getRoot());
 
-        // Attach the role selector adapter to the spinner.
-        final var availableRoles = List.of(DefaultRoles);
-        // TODO (chase): Add the admin role if logged in account is an admin.
-        binding.roleSelector.setAdapter(new RoleSpinnerAdapter(this, availableRoles));
+        // Add the admin role if logged in account is an admin.
+        final var spinnerAdapter =
+                new RoleSpinnerAdapter(this, new ArrayList<>(Arrays.asList(DefaultRoles)));
+
+        if (this instanceof AdminActivity) {
+            // Obviously, if we got here - we are an admin.
+            spinnerAdapter.add(AdminRole);
+            spinnerAdapter.notifyDataSetChanged();
+        } else {
+            // Check if this account is an admin and add the role.
+            final var self = FirebaseAuthUtils.getCurrentEmail();
+            new AccountDB().isAdmin(self).thenRun(isAdmin -> {
+                if (isAdmin) {
+                    spinnerAdapter.add(AdminRole);
+                    spinnerAdapter.notifyDataSetChanged();
+                }
+            });
+        }
+
+        binding.roleSelector.setAdapter(spinnerAdapter);
         binding.roleSelector.setOnItemSelectedListener(this);
         binding.roleSelector.setSelection(rolePosition());
 
         // Set the navbar.
         final var navBar = binding.navbar;
+        navBar.inflateMenu(getMenu());
         final var fragmentContainer = binding.navHostFragment;
         NavHostFragment navHostFragment = (NavHostFragment)
                 getSupportFragmentManager().findFragmentById(fragmentContainer.getId());
@@ -183,6 +213,7 @@ public abstract class ArchitectureActivity extends AppCompatActivity
                 switch (position) {
                     case 0 -> new Intent(this, EntrantActivity.class);
                     case 1 -> new Intent(this, OrganizerActivity.class);
+                    case 2 -> new Intent(this, AdminActivity.class);
                     // TODO (chase): Admin activity intent here.
                     default -> throw new RuntimeException("Admin activity not implemented yet");
                 };
